# docling-rs

./: .gitignore  Cargo.toml  README.md
crates/backends/: Cargo.toml
crates/backends/src/: asciidoc.rs  csv.rs  docx.rs  html.rs  image.rs  json.rs  latex.rs  lib.rs  markdown.rs  noop.rs  pdf.rs  pptx.rs  webvtt.rs  xlsx.rs
crates/backends/src/xml/: jats.rs  mod.rs  uspto.rs  xbrl.rs
crates/chunking/: Cargo.toml
crates/chunking/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/converter/: Cargo.toml
crates/converter/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: backend_options.rs  base_models.rs  doc_types.rs  document.rs  errors.rs  lib.rs  pipeline_options.rs  settings.rs
crates/models/: Cargo.toml
crates/models/src/: base_model.rs  layout.rs  lib.rs  ocr.rs  picture_classifier.rs  picture_description.rs  table.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: base.rs  lib.rs  simple.rs  standard_pdf.rs
crates/utils/: Cargo.toml
crates/utils/src/: export.rs  lib.rs  profiling.rs
docling/: document_converter.rs  errors.rs  lib.rs  main.rs
docling/backend/: asciidoc.rs  audio.rs  csv.rs  docx.rs  html.rs  image.rs  json.rs  latex.rs  markdown.rs  mod.rs  noop.rs  pdf.rs  pptx.rs  video.rs  webvtt.rs  xlsx.rs
docling/backend/xml/: jats.rs  mod.rs  uspto.rs  xbrl.rs
docling/chunking/: base.rs  hierarchical.rs  hybrid.rs  mod.rs
docling/datamodel/: backend_options.rs  base_models.rs  document.rs  mod.rs  pipeline_options.rs  settings.rs
docling/models/: base_model.rs  layout.rs  mod.rs  ocr.rs  picture_classifier.rs  picture_description.rs  table.rs
docling/pipeline/: base.rs  mod.rs  simple.rs  standard_pdf.rs
docling/utils/: export.rs  mod.rs  profiling.rs
tests/: test_backend_markdown.rs
tests/common/: mod.rs
