[package]
name = "docling"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust port of Docling — universal document conversion for AI pipelines"
repository = "https://github.com/raaznp/docling-rs"

# ── Library crate ────────────────────────────────────────────
[lib]
path = "docling/lib.rs"

# ── CLI binary ───────────────────────────────────────────────
[[bin]]
name = "docling"
path = "docling/main.rs"

# ── Features ─────────────────────────────────────────────────
[features]
default = ["office"]
office = ["dep:calamine", "dep:zip"]
asr = []                             # future: Whisper ONNX for audio/video transcription
onnx = []                            # future: ort ONNX Runtime for layout/OCR/table models

# ── Dependencies ─────────────────────────────────────────────
[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Async / parallelism
rayon = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Bytes / networking
bytes = "1"
url = "2"
regex = "1"

# Home directory resolution (for model artifacts)
dirs = "5"

# ── Document format parsers ──────────────────────────────────
# HTML
scraper = "0.22"

# Markdown
pulldown-cmark = "0.12"

# PDF (pure-Rust text-layer extraction)
lopdf = "0.34"

# Office formats
calamine = { version = "0.26", features = ["dates"], optional = true }
docx-rs = "0.4.18"
zip = { version = "2", optional = true }

# XML
quick-xml = "0.37"

# CSV
csv = "1"

# Image
image = "0.25"

# Tokenizers (future VLM / text models)
# tokenizers = { version = "0.21", optional = true }
