[package]
name = "docling"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "docling"
path = "src/main.rs"

[dependencies]
docling-core = { path = "../core" }
docling-converter = { path = "../converter" }
docling-chunking = { path = "../chunking" }
docling-utils = { path = "../utils" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
