[package]
name = "docling-converter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
docling-core = { path = "../core" }
docling-backends = { path = "../backends" }
docling-pipeline = { path = "../pipeline" }
docling-utils = { path = "../utils" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
md5 = { workspace = true }
bytes = { workspace = true }
