[package]
name = "docling-models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
docling-core = { path = "../core" }
docling-utils = { path = "../utils" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
ndarray = { workspace = true }
image = { workspace = true }
rstar = { workspace = true }
rayon = { workspace = true }

# ONNX Runtime (optional, enabled via the 'onnx' feature flag)
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"], optional = true }

# Tokenizer (for VLM/text models)
tokenizers = { version = "0.21", optional = true }

# Home directory resolution
dirs = { workspace = true }

[features]
default = ["onnx"]
onnx = ["dep:ort"]
vlm = ["dep:tokenizers"]
